read comments from Controllers

--- a/app/views/ssbe_api/docs/index.html.haml
+++ b/app/views/ssbe_api/docs/index.html.haml
@@ -24,5 +24,7 @@
                           %a= action[:request_method]
                         %span.path
                           %a= action[:path]
+                      %ul.options
+                        %li= comments(action).first
 
 
