use MethodComments object to display controller comments

--- a/app/views/ssbe_api/docs/index.html.haml
+++ b/app/views/ssbe_api/docs/index.html.haml
@@ -25,6 +25,6 @@
                         %span.path
                           %a= action[:path]
                       %ul.options
-                        %li= comments(action).first
+                        %li= comments(action).summary
 
 
