--- a/app/views/ssbe_api/docs/index.html.haml
+++ b/app/views/ssbe_api/docs/index.html.haml
@@ -17,24 +17,4 @@
               %ul.operations
 
                 - actions.each do |action|
-                  %li{:class => "operation #{action[:request_method].downcase}"}
-                    .heading
-                      %h3
-                        %span.http_method
-                          %a= action[:request_method]
-                        %span.path
-                          %a= action[:path]
-                      %ul.options
-                        %li= comments(action).summary
-                    .content
-                      %p= comments(action).return
-                      %table.fullwidth
-                        %thead
-                          %tr 
-                            %th Parameter
-                            %th Description
-                          
-                          %tr
-                            - comments(action).params.each do |param_name, param_value|
-                              %td= param_name
-                              %td= param_value
+                  = render :partial => "operation", :locals => { :action => action, :comments => comments(action)}
