--- a/app/views/ssbe_api/docs/_operation.html.haml
+++ b/app/views/ssbe_api/docs/_operation.html.haml
@@ -4,7 +4,7 @@
       %span.http_method
         %a= action[:request_method]
       %span.path
-        %a= action[:path]
+        %a{:href => '#'}= action[:path]
     %ul.options
       %li= comments.summary
   .content
