--- a/app/views/layouts/ssbe_api/application.html.erb
+++ b/app/views/layouts/ssbe_api/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SsbeApi</title>
+  <title>Documentation</title>
   <%= stylesheet_link_tag    "ssbe_api/application", :media => "all" %>
   <%= javascript_include_tag "http://chrome.#{FQDN}/assets/application.js" %>
   <%= csrf_meta_tags %>
